syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message RemoveConfigsFromDeviceRequest {
	OpDevice device = 1;
	repeated OpConfig configs = 2;
}
